Run qcsrc/tools/cvar-standardize.sh script
I pity whoever reviews this MR

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -1,9 +1,9 @@
 // this is a dummy skin that contains only the cvar descriptions, so that we can leave them out from the real skin files themselves.
 // please add any new cvars into this file, with null string values
 seta hud_skin "" "skin folder where to look for images"
-seta hud_panel_bg "" "default background for the panels, file must exist in gfx/hud/[skin name]/; 0 = disable background by default"
+seta hud_panel_bg "" "default background for the panels, file must exist in gfx/hud/[skin name]/; \"0\" = disable background by default"
 seta hud_panel_bg_color "" "default background color for the panels, accepts \"shirt\" and \"pants\""
-seta hud_panel_bg_color_team "" "default setting for overriding panel color with team color in team games; 0.5 = less saturated"
+seta hud_panel_bg_color_team "" "default setting for overriding panel color with team color in team games; \"0.5\" = less saturated"
 seta hud_panel_bg_alpha "" "default alpha of the background"
 seta hud_panel_bg_border "" "default border size for the panels"
 seta hud_panel_bg_padding "" "default padding of contents from the border"
@@ -54,12 +54,12 @@ seta hud_panel_weapons_complainbubble_color_unavailable "" "color of the complai
 seta hud_panel_weapons_ammo_color "" "color of status bar"
 seta hud_panel_weapons_ammo_alpha "" "alpha of status bar"
 seta hud_panel_weapons_timeout "" "panel disappears if you don't switch weapon for this amount of seconds"
-seta hud_panel_weapons_timeout_effect "" "disappearance effect; 0 = no effect, 1 = panel fades out, 2 = panel moves off the screen, 3 = combination of 1 and 2"
+seta hud_panel_weapons_timeout_effect "" "disappearance effect; \"0\" = no effect, \"1\" = panel fades out, \"2\" = panel moves off the screen, \"3\" = combination of 1 and 2"
 seta hud_panel_weapons_timeout_fadebgmin "" "minimum alpha of the panel background while in effect mode 1"
 seta hud_panel_weapons_timeout_fadefgmin "" "minimum alpha of the panel foreground while in effect mode 1"
 seta hud_panel_weapons_timeout_speed_in "" "speed that fading/moving onto the screen occurs"
 seta hud_panel_weapons_timeout_speed_out "" "speed that fading/moving off of the screen occurs"
-seta hud_panel_weapons_label "" "1 = show number of weapon, 2 = show bound key of weapon, 3 = show name of weapon"
+seta hud_panel_weapons_label "" "\"1\" = show number of weapon, \"2\" = show bound key of weapon, \"3\" = show name of weapon"
 seta hud_panel_weapons_label_scale "" "scale of the weapon text label"
 seta hud_panel_weapons_accuracy "" "show accuracy color as the weapon icon background; colors can be configured with accuracy_color* cvars"
 seta hud_panel_weapons_ammo "" "show ammo as a status bar"
@@ -67,14 +67,14 @@ seta hud_panel_weapons_onlyowned "" "show only owned weapons, set to \"2\" to sh
 seta hud_panel_weapons_noncurrent_alpha "" "alpha of noncurrent weapons"
 seta hud_panel_weapons_noncurrent_scale "" "scale of noncurrent weapons, relative to the current weapon"
 seta hud_panel_weapons_selection_radius "" "number of weapons that get partially highlighted on each side of the currently selected weapon"
-seta hud_panel_weapons_selection_speed "" "weapon selection speed; 0 = instant"
+seta hud_panel_weapons_selection_speed "" "weapon selection speed; \"0\" = instant"
 
 seta hud_panel_ammo_pos "" "position of this panel"
 seta hud_panel_ammo_size "" "size of this panel"
-seta hud_panel_ammo_onlycurrent "" "1 = show only current ammo type"
+seta hud_panel_ammo_onlycurrent "" "\"1\" = show only current ammo type"
 seta hud_panel_ammo_noncurrent_alpha "" "alpha of noncurrent ammo types"
 seta hud_panel_ammo_noncurrent_scale "" "scale of noncurrent ammo types, relative to the current ammo type"
-seta hud_panel_ammo_iconalign "" "0 = align icons to the left, 1 = align icons to the right"
+seta hud_panel_ammo_iconalign "" "\"0\" = align icons to the left, \"1\" = align icons to the right"
 seta hud_panel_ammo_bg "" "if set to something else than \"\" = override default background"
 seta hud_panel_ammo_bg_color "" "if set to something else than \"\" = override default panel background color"
 seta hud_panel_ammo_bg_color_team "" "override panel color with team color in team based games"
@@ -88,8 +88,8 @@ seta hud_panel_ammo_text "" "show text/icons in the ammo panel"
 
 seta hud_panel_powerups_pos "" "position of this panel"
 seta hud_panel_powerups_size "" "size of this panel"
-seta hud_panel_powerups_baralign "" "0 = align bars to the left, 1 = align bars to the right, 2 = align only left bar to the right, 3 = align only right bar to the right"
-seta hud_panel_powerups_iconalign "" "0 = align icons to the left, 1 = align icons to the right, 2 = align only left icon to the right, 3 = align only right icon to the right"
+seta hud_panel_powerups_baralign "" "\"0\" = align bars to the left, \"1\" = align bars to the right, \"2\" = align only left bar to the right, \"3\" = align only right bar to the right"
+seta hud_panel_powerups_iconalign "" "\"0\" = align icons to the left, \"1\" = align icons to the right, \"2\" = align only left icon to the right, \"3\" = align only right icon to the right"
 seta hud_panel_powerups_bg "" "if set to something else than \"\" = override default background"
 seta hud_panel_powerups_bg_color "" "if set to something else than \"\" = override default panel background color"
 seta hud_panel_powerups_bg_color_team "" "override panel color with team color in team based games"
@@ -103,8 +103,8 @@ seta hud_panel_healtharmor_pos "" "position of this panel"
 seta hud_panel_healtharmor_size "" "size of this panel"
 seta hud_panel_healtharmor_combined "" "combined health/armor display"
 seta hud_panel_healtharmor_flip "" "flip health/armor positions"
-seta hud_panel_healtharmor_baralign "" "0 = align bars to the left, 1 = align bars to the right, 2 = align only left bar to the right, 3 = align only right bar to the right"
-seta hud_panel_healtharmor_iconalign "" "0 = align icons to the left, 1 = align icons to the right, 2 = align only left icon to the right, 3 = align only right icon to the right"
+seta hud_panel_healtharmor_baralign "" "\"0\" = align bars to the left, \"1\" = align bars to the right, \"2\" = align only left bar to the right, \"3\" = align only right bar to the right"
+seta hud_panel_healtharmor_iconalign "" "\"0\" = align icons to the left, \"1\" = align icons to the right, \"2\" = align only left icon to the right, \"3\" = align only right icon to the right"
 seta hud_panel_healtharmor_bg "" "if set to something else than \"\" = override default background"
 seta hud_panel_healtharmor_bg_color "" "if set to something else than \"\" = override default panel background color"
 seta hud_panel_healtharmor_bg_color_team "" "override panel color with team color in team based games"
@@ -116,7 +116,7 @@ seta hud_panel_healtharmor_progressbar "" "enable progress bar in panel"
 seta hud_panel_healtharmor_progressbar_health "" "progress bar image for health"
 seta hud_panel_healtharmor_progressbar_armor "" "progress bar image for armor"
 seta hud_panel_healtharmor_progressbar_gfx "" "enable graphic effects on the progress bars"
-seta hud_panel_healtharmor_progressbar_gfx_smooth "" "smooth changes of the progress bar when health/armor change at least by this amount; 0 = disables the effect"
+seta hud_panel_healtharmor_progressbar_gfx_smooth "" "smooth changes of the progress bar when health/armor change at least by this amount; \"0\" = disables the effect"
 
 seta hud_panel_notify_pos "" "position of this base of the panel"
 seta hud_panel_notify_size "" "size of this panel with all notifications on"
@@ -150,13 +150,13 @@ seta hud_panel_radar_bg_alpha "" "if set to something else than \"\" = override 
 seta hud_panel_radar_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_radar_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
 seta hud_panel_radar_foreground_alpha "" "alpha of the map"
-seta hud_panel_radar_rotation "" "rotation mode, you set what points up; 0 = player, 1 = west, 2 = south, 3 = east, 4 = north"
-seta hud_panel_radar_zoommode "" "zoom mode; 0 = zoomed by default, 1 = zoomed when +zoom, 2 = always zoomed, 3 = always zoomed out"
+seta hud_panel_radar_rotation "" "rotation mode, you set what points up; \"0\" = player, \"1\" = west, \"2\" = south, \"3\" = east, \"4\" = north"
+seta hud_panel_radar_zoommode "" "zoom mode; \"0\" = zoomed by default, \"1\" = zoomed when +zoom, \"2\" = always zoomed, \"3\" = always zoomed out"
 seta hud_panel_radar_scale "" "distance you can see on the team radar"
 seta hud_panel_radar_maximized_scale "" "distance you can see on the radar when maximized"
 seta hud_panel_radar_maximized_size "" "size of the radar when maximized"
-seta hud_panel_radar_maximized_rotation "" "rotation mode, you set what points up; 0 = player, 1 = west, 2 = south, 3 = east, 4 = north"
-seta hud_panel_radar_maximized_zoommode "" "zoom mode; 0 = zoomed by default, 1 = zoomed when +zoom, 2 = always zoomed, 3 = always zoomed out"
+seta hud_panel_radar_maximized_rotation "" "rotation mode, you set what points up; \"0\" = player, \"1\" = west, \"2\" = south, \"3\" = east, \"4\" = north"
+seta hud_panel_radar_maximized_zoommode "" "zoom mode; \"0\" = zoomed by default, \"1\" = zoomed when +zoom, \"2\" = always zoomed, \"3\" = always zoomed out"
 
 seta hud_panel_score_pos "" "position of this base of the panel"
 seta hud_panel_score_size "" "size of this panel"
@@ -166,7 +166,7 @@ seta hud_panel_score_bg_color_team "" "override panel color with team color in t
 seta hud_panel_score_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_score_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_score_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
-seta hud_panel_score_rankings "" "show rankings; 1 = always show my own score, 2 = pure rankings"
+seta hud_panel_score_rankings "" "show rankings; \"1\" = always show my own score, \"2\" = pure rankings"
 
 seta hud_panel_racetimer_pos "" "position of this base of the panel"
 seta hud_panel_racetimer_size "" "size of this panel"
@@ -195,9 +195,9 @@ seta hud_panel_modicons_bg_color_team "" "override panel color with team color i
 seta hud_panel_modicons_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_modicons_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_modicons_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
-seta hud_panel_modicons_ca_layout "" "2 possible layouts, active in Clan Arena; 0 = number of alive players, 1 = icons and number of alive players"
-seta hud_panel_modicons_dom_layout "" "3 possible layouts, active in Domination; 0 = only icons, 1 = icons and percentage of average pps (points per second), 2 = icons and average pps"
-seta hud_panel_modicons_freezetag_layout "" "2 possible layouts, active in Freeze Tag; 0 = number of alive players, 1 = icons and number of alive players"
+seta hud_panel_modicons_ca_layout "" "2 possible layouts, active in Clan Arena; \"0\" = number of alive players, \"1\" = icons and number of alive players"
+seta hud_panel_modicons_dom_layout "" "3 possible layouts, active in Domination; \"0\" = only icons, \"1\" = icons and percentage of average pps (points per second), \"2\" = icons and average pps"
+seta hud_panel_modicons_freezetag_layout "" "2 possible layouts, active in Freeze Tag; \"0\" = number of alive players, \"1\" = icons and number of alive players"
 
 seta hud_panel_pressedkeys_pos "" "position of this base of the panel"
 seta hud_panel_pressedkeys_size "" "size of this panel"
@@ -246,15 +246,15 @@ seta hud_panel_physics_bg_color_team "" "override panel color with team color in
 seta hud_panel_physics_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_physics_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_physics_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
-seta hud_panel_physics_baralign "" "0 = align bars to the left, 1 = align bars to the right, 2 = align only left bar to the right, 3 = align only right bar to the right, 4 = align bars to the center"
+seta hud_panel_physics_baralign "" "\"0\" = align bars to the left, \"1\" = align bars to the right, \"2\" = align only left bar to the right, \"3\" = align only right bar to the right, \"4\" = align bars to the center"
 seta hud_panel_physics_flip "" "flip speed/acceleration positions"
-seta hud_panel_physics_progressbar "" "enable progress bar in panel; 2 = only for speed, 3 = only for acceleration"
+seta hud_panel_physics_progressbar "" "enable progress bar in panel; \"2\" = only for speed, \"3\" = only for acceleration"
 seta hud_panel_physics_acceleration_max "" "acceleration progress bar gets completely filled up by this value (in g)"
-seta hud_panel_physics_acceleration_progressbar_mode "" "0 = progress bar increases from the center to the right if the acceleration is positive, to the left if it's negative, 1 = progress bar increases from the border in the same direction for both positive and negative accelerations"
+seta hud_panel_physics_acceleration_progressbar_mode "" "\"0\" = progress bar increases from the center to the right if the acceleration is positive, to the left if it's negative, \"1\" = progress bar increases from the border in the same direction for both positive and negative accelerations"
 seta hud_panel_physics_acceleration_progressbar_scale "" "multiply acceleration progress bar values by this factor (allow progress bar to go out of panel bounds)"
 seta hud_panel_physics_acceleration_progressbar_nonlinear "" "use a non linear function to display acceleration progress bar values (amplify more smaller values)"
 seta hud_panel_physics_acceleration_vertical "" "include the acceleration on the Z-axis"
-seta hud_panel_physics_text "" "show text in panel; 2 = only for speed, 3 = only for acceleration"
+seta hud_panel_physics_text "" "show text in panel; \"2\" = only for speed, \"3\" = only for acceleration"
 seta hud_panel_physics_text_scale "" "scale text height by this factor"
 seta hud_panel_physics_speed_unit_show "" "also show speed unit"
 seta hud_panel_physics_speed_max "" "speed progress bar gets filled up completely by this value (in qu/s)"
@@ -270,7 +270,7 @@ seta hud_panel_centerprint_bg_color_team "" "override panel color with team colo
 seta hud_panel_centerprint_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_centerprint_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_centerprint_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
-seta hud_panel_centerprint_align "" "text alignment; 0 = left, 0.5 = center, 1 = right"
+seta hud_panel_centerprint_align "" "text alignment; \"0\" = left, \"0.5\" = center, \"1\" = right"
 seta hud_panel_centerprint_flip "" "invert messages order"
 seta hud_panel_centerprint_fontscale "" "scale the text font by this amount"
 seta hud_panel_centerprint_fontscale_bold "" "scale the bold text font by this amount"
@@ -330,7 +330,7 @@ seta hud_panel_itemstime_bg_color_team "" "override panel color with team color 
 seta hud_panel_itemstime_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_itemstime_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_itemstime_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
-seta hud_panel_itemstime_iconalign "" "0 = align icons to the left, 1 = align icons to the right"
+seta hud_panel_itemstime_iconalign "" "\"0\" = align icons to the left, \"1\" = align icons to the right"
 seta hud_panel_itemstime_progressbar "" "use progress bar behind icons"
 seta hud_panel_itemstime_progressbar_name "" "name of progress bar to use behind icons"
 seta hud_panel_itemstime_progressbar_reduced "" "progress bar is displayed only in the text field"
@@ -346,7 +346,7 @@ seta hud_panel_quickmenu_bg_color_team "" "override panel color with team color 
 seta hud_panel_quickmenu_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_quickmenu_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_quickmenu_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
-seta hud_panel_quickmenu_align "" "text alignment; 0 = left, 0.5 = center, 1 = right"
+seta hud_panel_quickmenu_align "" "text alignment; \"0\" = left, \"0.5\" = center, \"1\" = right"
 
 seta hud_panel_scoreboard_pos "" "position of this base of the panel"
 seta hud_panel_scoreboard_size "" "size of this panel"
@@ -356,8 +356,8 @@ seta hud_panel_scoreboard_bg_color_team "" "override panel color with team color
 seta hud_panel_scoreboard_bg_alpha "" "if set to something else than \"\" = override default panel background alpha"
 seta hud_panel_scoreboard_bg_border "" "if set to something else than \"\" = override default size of border around the background"
 seta hud_panel_scoreboard_bg_padding "" "if set to something else than \"\" = override default padding of contents from border"
-seta hud_panel_scoreboard_fadeinspeed "" "speed at which scoreboard fades in, higher is faster; 0 = instant"
-seta hud_panel_scoreboard_fadeoutspeed "" "speed at which scoreboard fades out, higher is faster; 0 = instant"
+seta hud_panel_scoreboard_fadeinspeed "" "speed at which scoreboard fades in, higher is faster; \"0\" = instant"
+seta hud_panel_scoreboard_fadeoutspeed "" "speed at which scoreboard fades out, higher is faster; \"0\" = instant"
 seta hud_panel_scoreboard_respawntime_decimals "" "decimal places to show for the respawntime countdown display on the scoreboard"
 seta hud_panel_scoreboard_table_bg_alpha "" "background alpha of a scoreboard table"
 seta hud_panel_scoreboard_table_bg_scale "" "scale for the tiled scoreboard background"
