--- a/crosshairs.cfg
+++ b/crosshairs.cfg
@@ -17,7 +17,7 @@ seta crosshair_dot_color "1 0 0"
 seta crosshair_dot_color_custom 1 "use a custom color for the crosshair dot"
 
 // smooth transitions for crosshair changes
-seta crosshair_effect_time 0.4 "how fast (in seconds) some crosshair effects should take place; 0 = instant"
+seta crosshair_effect_time 0.4 "how fast (in seconds) some crosshair effects should take place; \"0\" = instant"
 seta crosshair_effect_scalefade 1 "use scaling and fading for crosshair effects"
 
 // item pickup animation settings
@@ -38,7 +38,7 @@ seta crosshair_hittest_blur_wall 1 "blur the crosshair if the shot is obstructed
 seta crosshair_hittest_showimpact 0 "move the crosshair to the actual impact location if obstructed (NOTE: debug setting, very glitchy!)"
 
 // change color based on special case
-seta crosshair_color_special 1 "apply a special color for the crosshair; 1 = weapon color (see also crosshair_per_weapon), 2 = a color based on health and armor, 3 = rainbow/random color"
+seta crosshair_color_special 1 "apply a special color for the crosshair; \"1\" = weapon color (see also crosshair_per_weapon), \"2\" = a color based on health and armor, \"3\" = rainbow/random color"
 seta crosshair_color_special_rainbow_delay 0.1
 seta crosshair_color_special_rainbow_brightness 20 "color brightness of the random crosshair colors"
 
