--- a/monsters.cfg
+++ b/monsters.cfg
@@ -95,7 +95,7 @@ set g_monster_golem_speed_walk 150
 // {{{ Misc
 set g_monsters 1
 set g_monsters_edit 0
-set g_monsters_skill 1 "Monster skill (affecting some of their attributes); 1 = easy, 2 = medium, 3 = hard, 4 = insane, 5 = nightmare"
+set g_monsters_skill 1 "monster skill (affecting some of their attributes); \"1\" = easy, \"2\" = medium, \"3\" = hard, \"4\" = insane, \"5\" = nightmare"
 set g_monsters_miniboss_chance 5
 set g_monsters_miniboss_healthboost 100
 set g_monsters_drop 1
@@ -103,7 +103,7 @@ set g_monsters_drop_time 10
 set g_monsters_ignoretraces 1
 set g_monsters_lineofsight 1
 set g_monsters_owners 1
-set g_monsters_teams 1 "Assign a team to monsters. Prevents them from targeting teammates"
+set g_monsters_teams 1 "assign a team to monsters. prevents them from targeting teammates"
 set g_monsters_playerclip_collisions 1
 set g_monsters_score_kill 0
 set g_monsters_score_spawned 0
