--- a/balance-overkill.cfg
+++ b/balance-overkill.cfg
@@ -248,7 +248,7 @@ set g_balance_superweapons_time 30
 // {{{ jetpack/hook
 set g_jetpack_antigravity 0.8 "factor of gravity compensation of the Jetpack"
 set g_jetpack_acceleration_side 1200 "acceleration of the Jetpack in the XY direction"
-set g_jetpack_acceleration_up 600 "acceleration of the Jetpack in the Z direction (note: you have to factor in gravity here, if antigravity is not \"1\")"
+set g_jetpack_acceleration_up 600 "acceleration of the Jetpack in the Z direction (NOTE: you have to factor in gravity here, if antigravity is not \"1\")"
 set g_jetpack_maxspeed_side 1200 "max speed of the Jetpack in the XY direction"
 set g_jetpack_maxspeed_up 600 "max speed of the Jetpack in the Z direction"
 set g_jetpack_fuel 8 "fuel per second for Jetpack"
