Americanize cvar description spelling
Hopefully I didn't miss anything

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -350,7 +350,7 @@ set g_ctf_flag_neutral_model "models/ctf/flags.md3"
 set g_ctf_flag_neutral_skin 4
 set g_ctf_flag_glowtrails 1
 set g_ctf_fullbrightflags 0
-set g_ctf_dynamiclights 0 "flags (not flag carriers) cast light of their team's colour"
+set g_ctf_dynamiclights 0 "flags (not flag carriers) cast light of their team's color"
 
 set g_ctf_ignore_frags 0	"make regular frags give no points"
 exec ctfscoring-samual.cfg
