--- a/mutators.cfg
+++ b/mutators.cfg
@@ -438,7 +438,7 @@ set g_rm_laser_count "3" "number of rocketminsta lasers"
 set g_rm_laser_speed "6000" "laser speed"
 set g_rm_laser_spread "0.05" "laser spread"
 set g_rm_laser_zspread "0" "vertical spread of group shots"
-set g_rm_laser_spread_random "0" "randomise rocketminsta laser spread"
+set g_rm_laser_spread_random "0" "randomize rocketminsta laser spread"
 set g_rm_laser_lifetime "30" "laser lifetime"
 set g_rm_laser_damage "80" "laser damage, divided by laser count"
 set g_rm_laser_refire "0.7" "laser refire"
@@ -516,7 +516,7 @@ set g_running_guns 0 "... or wonder, till it drives you mad, what would have fol
 // ==================
 set g_dynamic_handicap 0 "enable dynamic handicap"
 set g_dynamic_handicap_scale 0.2 "the scale of the handicap. larger values mean more penalties for strong players and more buffs for weak players"
-set g_dynamic_handicap_exponent 1 "the exponent used to calculate handicap; \"1\" means linear scale, values > 1 mean stronger non-linear handicap, values < 1 mean weaker non-linear handicap"
+set g_dynamic_handicap_exponent 1 "the exponent used to calculate handicap; \"1\" means linear scale, values > 1 mean stronger nonlinear handicap, values < 1 mean weaker nonlinear handicap"
 set g_dynamic_handicap_min 0 "the minimum value of the handicap"
 set g_dynamic_handicap_max 0 "the maximum value of the handicap"
 
