--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -24,7 +24,7 @@ cl_particles_forcetraileffects 1
 
 alias dropweapon "impulse 17"
 
-// support for servers still using the old centreprint MOTD
+// support for servers still using the old centerprint MOTD
 alias +show_info0 "+button7"
 alias -show_info0 "-button7"
 alias +show_info1 "menu_showwelcomedialog"
@@ -925,7 +925,7 @@ alias menu_sync "menu_cmd sync"
 seta cl_items_animate 7 "\"1\" = enable bobbing and spinning of 3D items, \"2\" = enable fading out of despawning loot items, \"4\" = enable glowing particles for despawning loot items; add the numbers together to enable that combination"
 seta cl_items_fadedist 500 "distance, relative to the server's g_items_maxdist, at which far away items will start to fade out; \"0\" = disable fading effect"
 seta cl_items_vehicle_alpha 0.75 "alpha of items seen from inside a vehicle"
-seta cl_items_vehicle_color "2 0.5 0.5" "colour of items seen from inside a vehicle"
+seta cl_items_vehicle_color "2 0.5 0.5" "color of items seen from inside a vehicle"
 seta cl_ghost_items 0.45 "enable ghosted items (when between 0 and 1, overrides the alpha value)"
 seta cl_ghost_items_color "-1 -1 -1" "color of ghosted items (FORMAT: \"0 0 0\" leaves the color unchanged, negative values allowed)"
 seta cl_simple_items 0 "enable simple items (if server allows)"
