--- a/notifications.cfg
+++ b/notifications.cfg
@@ -785,7 +785,7 @@ seta notification_CHOICE_TYPEFRAGGED "1" "choice for this notification; \"0\" = 
 seta notification_CHOICE_TYPEFRAGGED_ALLOWED "1" "allow choice for this notification; \"0\" = off, \"1\" = only in warmup-stage, \"2\" = always"
 
 // HARD CODED notification variables:
-seta notification_allow_chatboxprint "1" "allow INFO notifications to be printed to chat box \"0\" = do not allow, \"1\" = allow only if allowed by individual notification_INFO* cvars, \"2\" = force all INFO notifications to be printed to the chatbox"
+seta notification_allow_chatboxprint "1" "allow INFO notifications to be printed to chat box; \"0\" = do not allow, \"1\" = allow only if allowed by individual notification_INFO* cvars, \"2\" = force all INFO notifications to be printed to the chatbox"
 seta notification_debug "0" "print extra debug information on all notification function calls (REQUIRES: -DNOTIFICATIONS_DEBUG flag to be enabled on QCSRC compilation); \"0\" = disabled, \"1\" = dprint, \"2\" = print"
 seta notification_errors_are_fatal "1" "if a notification fails upon initialization, cause a Host_Error to stop the program"
 seta notification_item_centerprinttime "1.5" "how long to show item information centerprint messages (like 'You got the Electro' or such)"
