DRAFT: cl_hideotherplayers, works but when unset doesn't reset the NO_DRAW effect, so other players reapear after a respawn, not instantly.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -814,6 +814,7 @@ set cl_accuracy_data_receive 0 "receive weapon accuracy data statistics at the e
 
 set developer_csqcentities 0 "csqc entity spam"
 
+seta cl_hideotherplayers 0 "make everyone else invisible"
 seta cl_forceplayermodels 0 "make everyone look like your own model (REQUIRES: server to have sv_defaultcharacter 0)"
 seta cl_forceplayercolors 0 "make enemies look like your own color (REQUIRES: server to have sv_defaultcharacter 0); \"1\" = in all game modes without teams (if cl_forceuniqueplayercolors is \"0\"), \"2\" = always, \"3\" = only in Duel, \"4\" = only in game modes with 2 teams, \"5\" = in team games and Duel"
 seta cl_forceuniqueplayercolors 0 "assign each enemy unique colors in all game modes without teams except Duel (REQUIRES: server to have sv_defaultcharacter 0)"
