Port-o-Launch -> Port-O-Launch in cfgs
Realized I had missed the capital O

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -301,7 +301,7 @@ set g_ctf_flagcarrier_waypointforenemy_spotting 1 "show the enemy flagcarrier lo
 set g_ctf_dropped_capture_delay 1 "autocapture delay when flag is thrown onto the base. counted from when the flag lands on the ground"
 set g_ctf_dropped_capture_radius 100 "allow dropped flags to be automatically captured by base flags if the dropped flag is within this radius of it"
 set g_ctf_flag_damageforcescale 2
-set g_ctf_portalteleport 0 "allow flag carriers to go through portals made by the Port-o-Launch without dropping the flag"
+set g_ctf_portalteleport 0 "allow flag carriers to go through portals made by the Port-O-Launch without dropping the flag"
 set g_ctf_reverse 0 "if enabled, players score by bringing their own flag to an enemy's flag in their base"
 set g_ctf_flag_collect_delay 1
 set g_ctf_flag_health 0 "secondary setting of g_ctf_flag_return_damage that defines initial health of the flag when dropped. if set to \"0\" initial health defaults to 100"
