--- a/randomitems-xonotic.cfg
+++ b/randomitems-xonotic.cfg
@@ -31,7 +31,7 @@ set g_random_items_replace_weapon_tuba "random" "classnames to replace Tuba with
 set g_random_items_replace_weapon_okshotgun "random" "classnames to replace Overkill Shotgun with"
 set g_random_items_replace_weapon_okmachinegun "random" "classnames to replace Overkill Machinegun with"
 set g_random_items_replace_weapon_oknex "random" "classnames to replace Overkill Nex with"
-set g_random_items_replace_weapon_porto "random" "classnames to replace Port-o-Launch with"
+set g_random_items_replace_weapon_porto "random" "classnames to replace Port-O-Launch with"
 set g_random_items_replace_weapon_fireball "random" "classnames to replace Fireball with"
 set g_random_items_replace_weapon_minelayer "random" "classnames to replace Mine Layer with"
 set g_random_items_replace_weapon_hlac "random" "classnames to replace HLAC with"
@@ -82,7 +82,7 @@ set g_random_items_weapon_tuba_probability 0 "probability of random Tuba spawnin
 set g_random_items_weapon_okshotgun_probability 0 "probability of random Overkill Shotgun spawning in the map"
 set g_random_items_weapon_okmachinegun_probability 0 "probability of random Overkill Machinegun spawning in the map"
 set g_random_items_weapon_oknex_probability 0 "probability of random Overkill Nex spawning in the map"
-set g_random_items_weapon_porto_probability 0 "probability of random Port-o-Launch spawning in the map"
+set g_random_items_weapon_porto_probability 0 "probability of random Port-O-Launch spawning in the map"
 set g_random_items_weapon_fireball_probability 0 "probability of random Fireball spawning in the map"
 set g_random_items_weapon_minelayer_probability 0 "probability of random Mine Layer spawning in the map"
 set g_random_items_weapon_hlac_probability 0 "probability of random HLAC spawning in the map"
@@ -143,7 +143,7 @@ set g_random_loot_weapon_tuba_probability 0 "probability of random Tuba spawning
 set g_random_loot_weapon_okshotgun_probability 0 "probability of random Overkill Shotgun spawning as loot"
 set g_random_loot_weapon_okmachinegun_probability 0 "probability of random Overkill Machinegun spawning as loot"
 set g_random_loot_weapon_oknex_probability 0 "probability of random Overkill Nex spawning as loot"
-set g_random_loot_weapon_porto_probability 0 "probability of random Port-o-Launch spawning as loot"
+set g_random_loot_weapon_porto_probability 0 "probability of random Port-O-Launch spawning as loot"
 set g_random_loot_weapon_fireball_probability 0 "probability of random Fireball spawning as loot"
 set g_random_loot_weapon_minelayer_probability 0 "probability of random Mine Layer spawning as loot"
 set g_random_loot_weapon_hlac_probability 0 "probability of random HLAC spawning as loot"
