--- a/polytrails.cfg
+++ b/polytrails.cfg
@@ -2,18 +2,19 @@
 // a polygon rendering system for trails
 
 seta cl_polytrails 1 "enable polygon-based trail effect drawing (looks better but may impact performance)"
+seta cl_polytrails_teamcolor 0 "apply team and player colors to part of the polytrails"
 
 // electro primary bolt
 seta cl_polytrails_electro_bolt 1
-seta cl_polytrails_electro_bolt_rgb0 "0.75 0.75 1"
-seta cl_polytrails_electro_bolt_rgb1 "0.45 0.45 1"
-seta cl_polytrails_electro_bolt_rgb2 "0.1 0.1 0.75"
-seta cl_polytrails_electro_bolt_alpha0 1
-seta cl_polytrails_electro_bolt_alpha1 0.5
-seta cl_polytrails_electro_bolt_alpha2 0
-seta cl_polytrails_electro_bolt_thickness0 5
-seta cl_polytrails_electro_bolt_thickness1 5
-seta cl_polytrails_electro_bolt_thickness2 0
+seta cl_polytrails_electro_bolt_head_alpha 1
+seta cl_polytrails_electro_bolt_head_color "0.75 0.75 1"
+seta cl_polytrails_electro_bolt_head_thickness 5
+seta cl_polytrails_electro_bolt_body_alpha 0.5
+seta cl_polytrails_electro_bolt_body_color "0.45 0.45 1"
+seta cl_polytrails_electro_bolt_body_thickness 5
+seta cl_polytrails_electro_bolt_tail_alpha 0
+seta cl_polytrails_electro_bolt_tail_color "0.1 0.1 0.75"
+seta cl_polytrails_electro_bolt_tail_thickness 0
 seta cl_polytrails_electro_bolt_lifetime 0.27
 seta cl_polytrails_electro_bolt_segmentsize 10
 seta cl_polytrails_electro_bolt_noise 5
@@ -21,15 +22,15 @@ seta cl_polytrails_electro_bolt_noisefunc "chaotic"
 
 // electro secondary orb
 seta cl_polytrails_electro_orb 1
-seta cl_polytrails_electro_orb_rgb0 "0.8 0.8 1"
-seta cl_polytrails_electro_orb_rgb1 "0.5 0.5 1"
-seta cl_polytrails_electro_orb_rgb2 "0.1 0.1 0.7"
-seta cl_polytrails_electro_orb_alpha0 1
-seta cl_polytrails_electro_orb_alpha1 0.5
-seta cl_polytrails_electro_orb_alpha2 0
-seta cl_polytrails_electro_orb_thickness0 15
-seta cl_polytrails_electro_orb_thickness1 7
-seta cl_polytrails_electro_orb_thickness2 0
+seta cl_polytrails_electro_orb_head_alpha 1
+seta cl_polytrails_electro_orb_head_color "0.8 0.8 1"
+seta cl_polytrails_electro_orb_head_thickness 15
+seta cl_polytrails_electro_orb_body_alpha 0.5
+seta cl_polytrails_electro_orb_body_color "0.5 0.5 1"
+seta cl_polytrails_electro_orb_body_thickness 7
+seta cl_polytrails_electro_orb_tail_alpha 0
+seta cl_polytrails_electro_orb_tail_color "0.1 0.1 0.7"
+seta cl_polytrails_electro_orb_tail_thickness 0
 seta cl_polytrails_electro_orb_lifetime 0.18
 seta cl_polytrails_electro_orb_segmentsize 10
 seta cl_polytrails_electro_orb_noise 10
@@ -37,15 +38,15 @@ seta cl_polytrails_electro_orb_noisefunc "chaotic"
 
 // crylink bouncing projectile
 seta cl_polytrails_crylink_bouncing 1
-seta cl_polytrails_crylink_bouncing_rgb0 "0.7 0 1"
-seta cl_polytrails_crylink_bouncing_rgb1 "0.5 0 1"
-seta cl_polytrails_crylink_bouncing_rgb2 "0.1 0 0.8"
-seta cl_polytrails_crylink_bouncing_alpha0 0.5
-seta cl_polytrails_crylink_bouncing_alpha1 0.2
-seta cl_polytrails_crylink_bouncing_alpha2 0
-seta cl_polytrails_crylink_bouncing_thickness0 5
-seta cl_polytrails_crylink_bouncing_thickness1 3
-seta cl_polytrails_crylink_bouncing_thickness2 3
+seta cl_polytrails_crylink_bouncing_head_alpha 0.5
+seta cl_polytrails_crylink_bouncing_head_color "0.7 0 1"
+seta cl_polytrails_crylink_bouncing_head_thickness 5
+seta cl_polytrails_crylink_bouncing_body_alpha 0.2
+seta cl_polytrails_crylink_bouncing_body_color "0.5 0 1"
+seta cl_polytrails_crylink_bouncing_body_thickness 3
+seta cl_polytrails_crylink_bouncing_tail_alpha 0
+seta cl_polytrails_crylink_bouncing_tail_color "0.1 0 0.8"
+seta cl_polytrails_crylink_bouncing_tail_thickness 13
 seta cl_polytrails_crylink_bouncing_lifetime 0.15
 seta cl_polytrails_crylink_bouncing_segmentsize 80
 seta cl_polytrails_crylink_bouncing_noise 0
@@ -53,15 +54,15 @@ seta cl_polytrails_crylink_bouncing_noisefunc "none"
 
 // crylink bolt projectiles
 seta cl_polytrails_crylink_bolt 1
-seta cl_polytrails_crylink_bolt_rgb0 "0.7 0 1"
-seta cl_polytrails_crylink_bolt_rgb1 "0.5 0 1"
-seta cl_polytrails_crylink_bolt_rgb2 "0.1 0 0.8"
-seta cl_polytrails_crylink_bolt_alpha0 0.75
-seta cl_polytrails_crylink_bolt_alpha1 0.2
-seta cl_polytrails_crylink_bolt_alpha2 0
-seta cl_polytrails_crylink_bolt_thickness0 5
-seta cl_polytrails_crylink_bolt_thickness1 3
-seta cl_polytrails_crylink_bolt_thickness2 3
+seta cl_polytrails_crylink_bolt_head_alpha 0.75
+seta cl_polytrails_crylink_bolt_head_color "0.7 0 1"
+seta cl_polytrails_crylink_bolt_head_thickness 5
+seta cl_polytrails_crylink_bolt_body_alpha 0.2
+seta cl_polytrails_crylink_bolt_body_color "0.5 0 1"
+seta cl_polytrails_crylink_bolt_body_thickness 3
+seta cl_polytrails_crylink_bolt_tail_alpha 0
+seta cl_polytrails_crylink_bolt_tail_color "0.1 0 0.8"
+seta cl_polytrails_crylink_bolt_tail_thickness 3
 seta cl_polytrails_crylink_bolt_lifetime 0.15
 seta cl_polytrails_crylink_bolt_segmentsize 80
 seta cl_polytrails_crylink_bolt_noise 0
