Write base code to allow for showing offhand items in the weapons HUD
Added cvar hud_panel_weapons_offhand.
Currently it forces showing the Ice Nade.
Currently there's a bug that for some reason the rows/columns doesn't update accordingly.
Included some refactoring to make this easier, like making a Weapons_DrawWeaponOrOffhand function.

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -68,6 +68,7 @@ seta hud_panel_weapons_noncurrent_alpha "" "alpha of noncurrent weapons"
 seta hud_panel_weapons_noncurrent_scale "" "scale of noncurrent weapons, relative to the current weapon"
 seta hud_panel_weapons_selection_radius "" "number of weapons that get partially highlighted on each side of the currently selected weapon"
 seta hud_panel_weapons_selection_speed "" "weapon selection speed (0 for an instant selection)"
+seta hud_panel_weapons_offhand "" "0 = don't show offhand weapons, 1 = show offhand weapons (if any) at the start of the list, 2 = show them at the end of the list"
 
 seta hud_panel_ammo_pos "" "position of this panel"
 seta hud_panel_ammo_size "" "size of this panel"
