--- a/hud_luma.cfg
+++ b/hud_luma.cfg
@@ -69,6 +69,7 @@ seta hud_panel_weapons_noncurrent_alpha "0.8"
 seta hud_panel_weapons_noncurrent_scale "0.9"
 seta hud_panel_weapons_selection_radius "0"
 seta hud_panel_weapons_selection_speed "10"
+seta hud_panel_weapons_offhand "2"
 
 seta hud_panel_ammo_pos "0.315000 0.865000"
 seta hud_panel_ammo_size "0.370000 0.060000"
