--- a/hud_luminos.cfg
+++ b/hud_luminos.cfg
@@ -69,6 +69,7 @@ seta hud_panel_weapons_noncurrent_alpha "1"
 seta hud_panel_weapons_noncurrent_scale "1"
 seta hud_panel_weapons_selection_radius "0"
 seta hud_panel_weapons_selection_speed "0"
+seta hud_panel_weapons_offhand "2"
 
 seta hud_panel_ammo_pos "0.330000 0.960000"
 seta hud_panel_ammo_size "0.350000 0.040000"
