--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -62,7 +62,7 @@ seta cl_zoomfactor 5	"how much +zoom will zoom (1-30)"
 seta cl_zoomspeed 8	"how fast it will zoom (0.5-16), negative values mean instant zoom"
 seta cl_zoomsensitivity 0	"how zoom changes sensitivity (0 = weakest, 1 = strongest)"
 seta cl_zoomscroll 0 "allow scrolling to zoom in or out further while holding +zoom"
-seta cl_zoomscroll_speed 10 "how fast it will scroll zoom (percentage change from the previous zoom value, maximum 100. negative values change the scroll direction)"
+seta cl_zoomscroll_scale 10 "how fast it will scroll zoom (percentage change from the previous zoom value, maximum 100. negative values change the scroll direction)"
 
 seta cl_unpress_zoom_on_spawn 1 "automatically unpress zoom when you spawn"
 seta cl_unpress_zoom_on_death 1 "automatically unpress zoom when you die (and don't allow zoom again while dead)"
