--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -61,7 +61,7 @@ seta cl_spawnzoom_factor 2 "factor of zoom while spawning"
 seta cl_zoomfactor 5	"how much +zoom will zoom (1-30)"
 seta cl_zoomspeed 8	"how fast it will zoom (0.5-16), negative values mean instant zoom"
 seta cl_zoomsensitivity 0	"how zoom changes sensitivity (0 = weakest, 1 = strongest)"
-seta cl_zoomscroll 0 "1 = allow scrolling to zoom in or out further while holding zooming, 2 = only when not zooming with a weapon (i.e. when using +zoom)"
+seta cl_zoomscroll 0 "allow scrolling to zoom in or out further while holding +zoom"
 seta cl_zoomscroll_scale 10 "how fast it will scroll zoom (percentage change from the previous zoom value, maximum 100. negative values change the scroll direction)"
 
 seta cl_unpress_zoom_on_spawn 1 "automatically unpress zoom when you spawn"
