Implement an option to toggle Vaporizer beam team colouring

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -939,6 +939,7 @@ seta cl_arcbeam_teamcolor 1 "color the Arc beam based on the player's colors"
 
 seta cl_grapplehook_alpha 1 "opacity of the grappling hook chain"
 
+seta cl_vaporizerbeam_teamcolor 1 "apply team and player colors to the vaporizer beam"
 seta cl_vaporizerbeam_particle 0 "use a legacy particle effect for the vaporizer beam instead of a rendered poly, may not reflect accurate colors"
 seta cl_vaporizerbeam_lifetime 0.8 "time it takes for the vaporizer beam to fade completely"
 seta cl_vaporizerbeam_colorboost 0.7 "saturation of the vaporizer beam's color based on the player color"
