--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -934,8 +934,9 @@ set cl_simpleitems_postfix "_luma" "posfix to add fo model name when simple item
 set cl_weapon_stay_color "2 0.5 0.5" "Color of picked up weapons when g_weapon_stay > 0 (colormod format: 0 0 0 leaves the color unchanged, negative values allowed)"
 set cl_weapon_stay_alpha 0.75 "Alpha of picked up weapons when g_weapon_stay > 0"
 
+seta cl_tracers_teamcolor 0 "apply team and player colors to weapon beam attacks, set to 1 for team games only and 2 for always"
+
 seta cl_arcbeam_simple 1 "use a simplified beam for the Arc instead of accurate flexible poly drawing (improves performance and visuals slightly)"
-seta cl_arcbeam_teamcolor 1 "color the Arc beam based on the player's colors"
 
 seta cl_grapplehook_alpha 1 "opacity of the grappling hook chain"
 
