--- a/vehicles.cfg
+++ b/vehicles.cfg
@@ -125,7 +125,7 @@ set g_vehicle_racer_friction 0.45
 
 set g_vehicle_racer_water_time 5
 
-set g_vehicle_racer_hovertype 0 "0 = hover, otherwise = maglev"
+set g_vehicle_racer_hovertype 0 "\"0\" = hover, otherwise maglev"
 set g_vehicle_racer_hoverpower 8000 "this is multiplied by 4 for the 4 engines"
 
 set g_vehicle_racer_turnroll 30
@@ -183,7 +183,7 @@ set g_vehicle_raptor_respawntime 40
 
 set g_vehicle_raptor_takeofftime 1.5
 
-set g_vehicle_raptor_movestyle 1 "0: move relative to player angles, 1: ignore aiming for up/down movement"
+set g_vehicle_raptor_movestyle 1 "\"0\" = move relative to player angles, \"1\" = ignore aiming for up/down movement"
 set g_vehicle_raptor_turnspeed 200
 set g_vehicle_raptor_pitchspeed 50
 set g_vehicle_raptor_pitchlimit 45
