--- a/balance-samual.cfg
+++ b/balance-samual.cfg
@@ -246,13 +246,13 @@ set g_balance_superweapons_time 30
 // }}}
 
 // {{{ jetpack/hook
-set g_jetpack_antigravity 0.8 "factor of gravity compensation of the jetpack"
-set g_jetpack_acceleration_side 1200 "acceleration of the jetpack in xy direction"
-set g_jetpack_acceleration_up 600 "acceleration of the jetpack in z direction (note: you have to factor in gravity here, if antigravity is not 1)"
-set g_jetpack_maxspeed_side 1200 "max speed of the jetpack in xy direction"
-set g_jetpack_maxspeed_up 600 "max speed of the jetpack in z direction"
-set g_jetpack_fuel 8 "fuel per second for jetpack"
-set g_jetpack_reverse_thrust 0 "if not 0, downward acceleration when crouching with the jetpack"
+set g_jetpack_antigravity 0.8 "factor of gravity compensation of the Jetpack"
+set g_jetpack_acceleration_side 1200 "acceleration of the Jetpack in the XY direction"
+set g_jetpack_acceleration_up 600 "acceleration of the Jetpack in the Z direction (NOTE: you have to factor in gravity here, if antigravity is not \"1\")"
+set g_jetpack_maxspeed_side 1200 "max speed of the Jetpack in the XY direction"
+set g_jetpack_maxspeed_up 600 "max speed of the Jetpack in the Z direction"
+set g_jetpack_fuel 8 "fuel per second for Jetpack"
+set g_jetpack_reverse_thrust 0 "if not \"0\", downward acceleration when crouching with the Jetpack"
 
 set g_grappling_hook_tarzan 2 // 2: can also pull players
 set g_balance_grapplehook_speed_fly 1800
