Use common spelling of color in the cl_tracers_teamcolor description

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -934,7 +934,7 @@ set cl_simpleitems_postfix "_luma" "posfix to add fo model name when simple item
 set cl_weapon_stay_color "2 0.5 0.5" "color of picked up weapons when g_weapon_stay > 0 (FORMAT: \"0 0 0\" leaves the color unchanged, negative values allowed)"
 set cl_weapon_stay_alpha 0.75 "alpha of picked up weapons when g_weapon_stay > 0"
 
-seta cl_tracers_teamcolor 0 "apply team and player colors to weapon beam attacks; \"1\" = team games only, \"2\" = always (player colours will be used outside of team games)"
+seta cl_tracers_teamcolor 0 "apply team and player colors to weapon beam attacks; \"1\" = team games only, \"2\" = always (player colors will be used outside of team games)"
 
 seta cl_arcbeam_simple 1 "use a simplified beam for the Arc instead of accurate flexible poly drawing (improves performance and visuals slightly)"
 
